z-index fix

--- a/apps/frontend/src/components/TextBlock/TextBlock.module.scss
+++ b/apps/frontend/src/components/TextBlock/TextBlock.module.scss
@@ -57,7 +57,7 @@
 		bottom: -40px;
 		left: 0;
 		background: linear-gradient(transparent 0%, #f6f5f8 100%);
-		z-index: 10;
+		z-index: 4;
 
 		@media (max-width: 768px) {
 			height: 100px;
